update Auth dan Endpoint
