# models/lokasi.js
@@ -1,30 +1,11 @@
 const mongoose = require('mongoose');
 
-const LokasiSchema = new mongoose.Schema({
-  nama: {
-    type: String,
-    required: true,
-  },
-  latitude: {
-    type: Number,
-    required: true,
-    min: -90,
-    max: 90,
-  },
-  longitude: {
-    type: Number,
-    required: true,
-    min: -180,
-    max: 180,
-  },
-  deskripsi: {
-    type: String,
-    required: true,
-  },
-  kategori: {
-    type: String,
-    required: true,
-  },
+const lokasiSchema = new mongoose.Schema({
+    nama: { type: String, required: true },
+    latitude: { type: Number, required: true },
+    longitude: { type: Number, required: true },
+    deskripsi: { type: String },
+    kategori: { type: String, required: true }
 });
 
-module.exports = mongoose.model('Lokasi', LokasiSchema);
+module.exports = mongoose.model('Lokasi', lokasiSchema);
