# routes/lokasiRoutes.js
@@ -1,18 +1,13 @@
 const express = require('express');
 const router = express.Router();
-const lokasiController = require('../controllers/lokasiController');
 const auth = require('../middleware/authMiddleware');
+const lokasiController = require('../controllers/lokasiController');
 
-
-// CRUD Lokasi
-router.post('/lokasi', lokasiController.createLokasi);
-router.get('/lokasi', lokasiController.getAllLokasi);
-router.get('/lokasi/:id', lokasiController.getLokasiById);
-router.get('/lokasi/kategori/:kategori', lokasiController.getLokasiByKategori);
-router.put('/lokasi/:id', lokasiController.updateLokasi);
-router.delete('/lokasi/:id', lokasiController.deleteLokasi);
-
-// Auth
-router.post('/lokasi', auth, lokasiController.createLokasi);
+// Endpoint CRUD Lokasi
+router.post('/lokasi', auth, lokasiController.createLokasi);  // Membutuhkan token JWT
+router.get('/lokasi', auth, lokasiController.getAllLokasi);    // Membutuhkan token JWT
+router.get('/lokasi/:id', auth, lokasiController.getLokasiById);  // Membutuhkan token JWT
+router.put('/lokasi/:id', auth, lokasiController.updateLokasi);   // Membutuhkan token JWT
+router.delete('/lokasi/:id', auth, lokasiController.deleteLokasi);  // Membutuhkan token JWT
 
 module.exports = router;
